[ Add, Edit, Fix ] fix issued http response from endpoint caused by non standard json heade which was resolved using Dio, added mini relay server using khatru to simulate real-life and release relays support, minor changes and edits, example Dart code to make an example request

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,9 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  http: ^1.2.2
   dart_nostr: ^8.0.3
   crypto: ^3.0.6
+  dio: ^5.9.0
   # path: ^1.8.0
 
 dev_dependencies:
